# mtcc

./: .dockerignore  LICENSE  LICENSE.md  README.md  compose.yml
mtcc-back/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
mtcc-back/src/: config.py  main.py  nfo.py  pres.py
mtcc-back/src/libs/: deezer.py  utils.py
mtcc-back/src/models/: album.py  banner.py  nfo.py  pres.py  torrent_content_response.py
mtcc-back/src/templates/: nfo.mako  pres.mako
mtcc-front/: .dockerignore  .env.development  .env.production  Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
mtcc-front/src/: App.tsx  index.css  main.tsx
mtcc-front/src/app/: globals.css  layout.tsx  page.tsx
mtcc-front/src/components/: AlbumCard.tsx  BannerAccordion.tsx  BlurryBlob.tsx  CopyToClipboardButton.tsx  DownloadNfoButton.tsx  Dropzone.tsx  Footer.tsx  Header.tsx  LightBlurryBlop.tsx  LoadingButton.tsx  NfoContent.tsx  PresContent.tsx  PreviewCardPres.tsx  PreviewUploadCardHome.tsx  PreviewUploadCardNfo.tsx  SearchAlbum.tsx  TorrentContent.tsx  UploadCard.tsx
mtcc-front/src/components/ui/: mode-toggle.tsx  scroll-area.tsx
mtcc-front/src/hooks/: useBannerData.ts  useLocalStorage.ts
mtcc-front/src/lib/: utils.ts
mtcc-front/src/routes/: About.tsx  Home.tsx  Layout.tsx  Nfo.tsx  Pres.tsx  home.css
mtcc-front/src/services/: useFileStore.ts  useSelectedAlbumStore.ts  useTorrentContentResponseStore.ts
