[tool.poetry]
name = "mtcc-back"
version = "0.1.0"
description = "Backend of mtcc application"
authors = ["Guillaume Coussot <guillaume.coussot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
python-multipart = "^0.0.6"
pymediainfo = "^6.0.1"
deezer-python = "^6.1.0"
mako = "^1.2.4"
python-magic = "^0.4.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
